--- a/JTB_ms/JTB_ms.Rmd
+++ b/JTB_ms/JTB_ms.Rmd
@@ -272,13 +272,13 @@ The importance of host CCM activity establishes significant interactive roles fo
 
 Since bleaching is induced by an external stressor, recovery from bleaching cannot occur unless the stressor is alleviated. In natural settings, this typically occurs by seasonal declines in temperature and light. However, alternate stable states lead to significant hysteresis, indicating that a coral cannot recover along the same trajectory it followed during bleaching; indeed, the stressor must be alleviated well *below* the threshold that initially caused bleaching in order for the system to recover (Fig. 2; Fig. X). This is because under the same external conditions, a bleached coral (relative to a healthy one) is characterized by greater light amplification and weaker CCM activity, which serve to maintain the bleached state. The magnitude of hysteresis will depend on external nutrients and prey availability, as well as model parameters, yet the core behavior of hysteresis illustrates the alternate stable states that exist in the symbiotic system.
 
-![Recovery from bleaching under varying N:C availability. Higher N:C ratios in a heterotrophic food source (effectively representing higher external DIN and/or lower feeding rates) cause a larger overshoot in the S:H biomass ratio, and prolong the duration of time until the system 'recovers' by re-establishing nitrogen-limitation (represented by black dots on each trajectory). All simulations run with default parameters (except varying nNX), L=10 mol photons m^2^ d^-1^, DIN=1e-7 molN L^-1^, prey=1e-6 CmolX L^-1^, and initial S:H biomass=0.0001.](../img/Fig8.png)
-
 The dynamics of recovery from bleaching reveal another interesting behavior of the system: under some conditions, the S:H biomass ratio may increase to a higher value that 'overshoots' the ratio maintained in the 'healthy' state under the same conditions (Fig. 8; Fig. S9). In fact, unusually high symbiont densities have been observed after recovery from bleaching in both experimental [@Cunning:2015ja] and field studies [@Kemp:2014ug], and have been interpreted as a potential 'disequilibrium in host-symbiont regulation' [@Kemp:2014ug]. The model explains this 'overshoot' as an approach to a bifurcation point in the dynamical system <<NOT RIGHT>>. As the symbiont begins repopulating the host, CO~2~ is limiting and nitrogen is replete, allowing nearly all fixed carbon to be used for symbiont growth. As a result, host growth remains strongly carbon-limited, CCM activity remains weak, and photosynthesis remains CO~2~-limited. As long as this carbon-limitation persists, S:H biomass will continue to increase beyond the 'healthy' steady state level, until the symbiont population eventually reaches a high enough density such that nitrogen limits its growth more strongly than carbon. At this point, which represents the peak of the 'overshoot', the symbiont begins to share carbon with the host, which then supplies more CO~2~ for photosynthesis, etc., causing the system to rapidly escape the positive feedbacks that were maintaining carbon-limitation (see Fig. S9 for illustration of all fluxes during overshoot). The re-establishment of nitrogen-limitation resumes high rates of carbon fixation and coral growth, bringing the S:H biomass ratio back down to a stable equilibrium. 
 
-The occurrence and the magnitude of this overshoot depend on the relative inputs of carbon and nitrogen to the system -- any factor that enhances carbon-limitation (e.g. high DIN and/or low feeding) therefore magnifies the overshoot and prolongs the dysfunctional, carbon-limited state of the symbiosis (Fig. 8). On the other hand, factors that favor nitrogen-limitation, such as low external DIN, high feeding rates, will prevent an overshoot from occurring at all, since nitrogen-limitation is re-established in the system before S:H biomass ratios reach high levels. While many scenarios are possible under different environmental conditions, we illustrate the general effects of varying N and C availability on recovery from bleaching with a series of simulations that vary the N:C ratio of host's heterotrophic food source (Fig. 8): lower N:C ratios (effectively representing lower DIN and/or higher heterotrophy) favor nitrogen-limitation and more rapid recovery, while higher N:C ratios (effectively representing higher DIN and/or lower heterotrophy) favor carbon-limitation and prolonged recovery with a larger overshoot in S:H biomass.
+![Recovery from bleaching under varying N:C availability. Higher N:C ratios in a heterotrophic food source (effectively representing higher external DIN and/or lower feeding rates) cause a larger overshoot in the S:H biomass ratio, and prolong the duration of time until the system 'recovers' by re-establishing nitrogen-limitation (represented by black dots on each trajectory). All simulations run with default parameters (except varying nNX), L=10 mol photons m^2^ d^-1^, DIN=1e-7 molN L^-1^, prey=1e-6 CmolX L^-1^, and initial S:H biomass=0.0001.](../img/Fig8.png)
 
-Importantly, the re-establishment of nitrogen-limitation that characterizes the 'healthy' symbiosis is the most important diagnostic for recovery, as this is when high carbon fixation and growth rates are resumed. A high S:H biomass ratio alone does not indicate a 'healthy' state has been reached, because overall C-limitation could still persist and thus the host isn't really growing. This could explain why corals that have apparently recovered their symbiont populations after bleaching still do not grow or suffer reduced reproduction until much later (xxx). Together, these dynamics indicate that acquisition of carbon from a source other than the symbiont is extremely important for the host in order to recover from bleaching. The system can 'recover' (in terms of resuming positive growth and N-limitation) more rapidly when the coral obtains more carbon. Indeed, feeding has been shown to promote more rapid recovery from bleaching (xxx). Moreover, if the host could obtain an independent source of carbon, such as direct uptake of DOC (xxx), this could be even more important in ensuring rapid recovery from a bleached state.
+The occurrence and the magnitude of this overshoot depend on the relative inputs of carbon and nitrogen to the system -- any factor that enhances carbon-limitation (e.g. high DIN and/or low feeding) therefore magnifies the overshoot and prolongs the dysfunctional, carbon-limited state of the symbiosis (Fig. 8). On the other hand, factors that favor nitrogen-limitation, such as low external DIN and/or high feeding rates, will accelerate the re-establishment of nitrogen-limitation and prevent an overshoot from occurring at all. While many scenarios are possible under different environmental conditions, we illustrate the general effects of varying N and C availability on recovery from bleaching with a series of simulations that vary the N:C ratio of host's heterotrophic food source (Fig. 8): lower N:C ratios (effectively representing lower DIN and/or higher heterotrophy) favor nitrogen-limitation and more rapid recovery, while higher N:C ratios (effectively representing higher DIN and/or lower heterotrophy) favor carbon-limitation and prolonged recovery with a larger overshoot in S:H biomass.
+
+Importantly, the re-establishment of nitrogen-limitation is the most important diagnostic of recovery to a 'healthy' state, as this is when high carbon fixation and growth rates are resumed. A high S:H biomass ratio alone does not indicate that a 'healthy' state has been reached, since overall C-limitation may still persist (e.g., high N:C ratios in Fig. 8). This could explain why corals that have apparently recovered their symbiont populations after bleaching still have reduced growth and reproduction rates until much later (xxx, Hughes). Therefore, acquisition of carbon from a source other than the symbiont may be extremely important for the host in order to recover from bleaching. Indeed, feeding has been shown to promote more rapid recovery from bleaching (xxx). Moreover, if the host obtains carbon from another independent source, such as direct uptake of DOC (xxx), this could be even more important in ensuring rapid recovery from a bleached state.
 
 # Conclusions
 This simplified dynamic bioenergetic model of coral-*Symbiodinium* symbioses mechanistically reproduces patterns in steady-state coral growth and symbiont abundance commonly observed in corals, including higher symbiont abundance with higher nutrients and feeding, lower symbiont abundance with increasing light, and optimal growth at intermediate light levels. Moreover, the model reproduces complex dynamic behaviors including seasonal changes in symbiont density at different nutrient levels, rapid bleaching above a threshold of high light, mitigation of bleaching by heterotrophic feeding, exacerbation of bleaching by elevated nutrients, and an overshoot of symbiont density during recovery from bleaching. These examples demonstrate the model's ability to integrate multiple environmental forcing functions to reproduce complex responses; meanwhile, the diversity of these phenomena suggest the model has captured many of the important features of the system in a unifying mechanistic framework. This model also provides a new conceptual framework for considering coral bleaching as a transition to an alternate stable state, which has important implications for understanding the performance and maintenance of symbiotic interactions. In this context, the 'healthy' stable state represents a scenario in which the host is 'in control' of the system, with nitrogen-limitation stabilizing the symbiont to host biomass ratio and maintaining positive growth. Conversely, carbon-limitation represents a loss of host 'control', wherein positive feedbacks result in a loss of capacity for photosynthetic carbon fixation and positive growth. Importantly, these 'control' mechanisms arise entirely passively through feedbacks present in the system.
