--- a/JTB_ms/JTB_ms.tex
+++ b/JTB_ms/JTB_ms.tex
@@ -1481,36 +1481,32 @@ relative inputs of carbon and nitrogen to the system -- any factor that
 enhances carbon-limitation (e.g.~high DIN and/or low feeding) therefore
 magnifies the overshoot and prolongs the dysfunctional, carbon-limited
 state of the symbiosis (Fig. 8). On the other hand, factors that favor
-nitrogen-limitation, such as low external DIN, high feeding rates, will
-prevent an overshoot from occurring at all, since nitrogen-limitation is
-re-established in the system before S:H biomass ratios reach high
-levels. While many scenarios are possible under different environmental
-conditions, we illustrate the general effects of varying N and C
-availability on recovery from bleaching with a series of simulations
-that vary the N:C ratio of host's heterotrophic food source (Fig. 8):
-lower N:C ratios (effectively representing lower DIN and/or higher
-heterotrophy) favor nitrogen-limitation and more rapid recovery, while
-higher N:C ratios (effectively representing higher DIN and/or lower
-heterotrophy) favor carbon-limitation and prolonged recovery with a
-larger overshoot in S:H biomass.
+nitrogen-limitation, such as low external DIN and/or high feeding rates,
+will accelerate the re-establishment of nitrogen-limitation and prevent
+an overshoot from occurring at all. While many scenarios are possible
+under different environmental conditions, we illustrate the general
+effects of varying N and C availability on recovery from bleaching with
+a series of simulations that vary the N:C ratio of host's heterotrophic
+food source (Fig. 8): lower N:C ratios (effectively representing lower
+DIN and/or higher heterotrophy) favor nitrogen-limitation and more rapid
+recovery, while higher N:C ratios (effectively representing higher DIN
+and/or lower heterotrophy) favor carbon-limitation and prolonged
+recovery with a larger overshoot in S:H biomass.
 
-Importantly, the re-establishment of nitrogen-limitation that
-characterizes the `healthy' symbiosis is the most important diagnostic
-for recovery, as this is when high carbon fixation and growth rates are
-resumed. A high S:H biomass ratio alone does not indicate a `healthy'
-state has been reached, because overall C-limitation could still persist
-and thus the host isn't really growing. This could explain why corals
-that have apparently recovered their symbiont populations after
-bleaching still do not grow or suffer reduced reproduction until much
-later (xxx). Together, these dynamics indicate that acquisition of
-carbon from a source other than the symbiont is extremely important for
-the host in order to recover from bleaching. The system can `recover'
-(in terms of resuming positive growth and N-limitation) more rapidly
-when the coral obtains more carbon. Indeed, feeding has been shown to
-promote more rapid recovery from bleaching (xxx). Moreover, if the host
-could obtain an independent source of carbon, such as direct uptake of
-DOC (xxx), this could be even more important in ensuring rapid recovery
-from a bleached state.
+Importantly, the re-establishment of nitrogen-limitation is the most
+important diagnostic of recovery to a `healthy' state, as this is when
+high carbon fixation and growth rates are resumed. A high S:H biomass
+ratio alone does not indicate that a `healthy' state has been reached,
+since overall C-limitation may still persist (e.g., high N:C ratios in
+Fig. 8). This could explain why corals that have apparently recovered
+their symbiont populations after bleaching still have reduced growth and
+reproduction rates until much later (xxx, Hughes). Therefore,
+acquisition of carbon from a source other than the symbiont may be
+extremely important for the host in order to recover from bleaching.
+Indeed, feeding has been shown to promote more rapid recovery from
+bleaching (xxx). Moreover, if the host obtains carbon from another
+independent source, such as direct uptake of DOC (xxx), this could be
+even more important in ensuring rapid recovery from a bleached state.
 
 \section{Conclusions}\label{conclusions}
 
